--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@elysiajs/eden": "^1.4.5",
+    "@tanstack/react-query": "^5.90.12",
+    "@upstash/realtime": "^1.0.0",
+    "@upstash/redis": "^1.35.7",
+    "date-fns": "^4.1.0",
+    "elysia": "^1.4.18",
+    "nanoid": "^5.1.6",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1"
